2016-11-08 Roman
- Transport.Serial: "No stop on proceed" option is added to output transports.


2016-11-07 Roman
- TSecurity: User API function User::groups() and Group::user() is added.
- DAQ.JavaLikeCalc: "Program translation allow" disabled by default. String's user API function parseLine() is added.


2016-11-03 Roman
- FIX:DB.LibsDB.OscadaLibs: Notifications dispatcher adapted to object's attributes deletion by the operator "delete".
- FIX:DB.LibsDB.vcaBase: Main.ElViewGraph: Adapted to store static parameters in the selection mode.
- SYS: TVariant.propClear() expanded to single property clean.
- !!!!:DAQ.JavaLikeCalc: Expanded by operator "delete" for objects or its properties free.


2016-11-02 Roman
- FIX:SYS: Discard for attributes of object clear at EVAL assign.
- !!:FIX:DB.LibsDB.OscadaLibs: Notifications dispatcher expanded by the notify messages criteria of its category and level.
- SYS: data/openscada_start.in: expanded by first argument --ProjName={PNm} project's selection.
- !!:DAQ.System: Expanded by "FS" data source. Automatic creation of sources expanded to modes of sources "Fast" and "Slow".
- UI.QTStarter: X Session manager disabled from restart the closed at exit programms.


2016-10-30 Roman
- !!:FIX:DB.LibsDB.OscadaLibs: Notifications dispatcher unified, stabilized and status is added for SMS and EMail sent by direct OpenSCADA functions.
    !!:Self SMS send implementing unified and expanded for: disable ECHO, check/set PIN, TEST and PDU SMS mode.
    FIX:Self SMTP implementing fixed for localized field "Date" by use an external call for utility "date".
- FIX:UI.Vision: Wrong sometime set cursor to current is fixed for primitive "Diagram".


2016-10-29 Roman
- FIX:Transport.SSL: TLSv1.1, TLSv1.2, DTLSv1 set to build for SSL version >= 0x1000114fL.
- Transport.Serial: Char limit value expanded to 10000 ms, for output.
- FIX:UI.QTStarter: Build for Qt5 fixed.


2016-10-28 Roman