@@ -1,3 +1,9 @@
+2016-11-09 Roman
+- SYS: sysSleep() moved to clock_nanosleep(), CLOCK_MONOTONIC and clock_gettime() for short times lesser to 300us.
+- FIX:DAQ.BCM2835: Librarie's function bcm2835_delayMicroseconds() moved to clock_gettime() for prevent crashes into the not privileged mode.
+- FIX:UI.VCAEngine: Static functions' name and description fixed.
+
+
 2016-11-08 Roman
 - Transport.Serial: "No stop on proceed" option is added to output transports.
 
